[gd_scene load_steps=3 format=3 uid="uid://b1e7qcqkaoc3u"]

[ext_resource type="Script" path="res://scripts/Client.gd" id="1_dk3s5"]
[ext_resource type="Script" path="res://scripts/Server.gd" id="2_7xvem"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Client" type="Node" parent="."]
script = ExtResource("1_dk3s5")

[node name="LineEdit" type="LineEdit" parent="Client"]
offset_left = 184.0
offset_top = 144.0
offset_right = 529.0
offset_bottom = 175.0

[node name="Server" type="Node" parent="."]
script = ExtResource("2_7xvem")

[node name="JoinLobby" type="Button" parent="."]
layout_mode = 0
offset_left = 34.0
offset_top = 143.0
offset_right = 173.0
offset_bottom = 174.0
text = "Join Lobby
"

[node name="StartClient" type="Button" parent="."]
layout_mode = 0
offset_left = 31.0
offset_top = 33.0
offset_right = 126.0
offset_bottom = 64.0
text = "Start Client"

[node name="StartServer" type="Button" parent="."]
layout_mode = 0
offset_left = 1020.0
offset_top = 26.0
offset_right = 1120.0
offset_bottom = 57.0
text = "Start Server"

[node name="SendTestPacket" type="Button" parent="."]
layout_mode = 0
offset_left = 33.0
offset_top = 85.0
offset_right = 172.0
offset_bottom = 116.0
text = "Send Test Packet"

[node name="Button2" type="Button" parent="."]
layout_mode = 0
offset_left = 911.0
offset_top = 78.0
offset_right = 1125.0
offset_bottom = 109.0
text = "Send Test Packet to clients"

[connection signal="button_down" from="JoinLobby" to="Client" method="_on_join_lobby_button_down"]
[connection signal="button_down" from="StartClient" to="Client" method="_on_start_client_button_down"]
[connection signal="button_down" from="StartServer" to="Server" method="_on_start_server_button_down"]
[connection signal="button_down" from="Button2" to="Server" method="_on_button_2_button_down"]
